--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -109,9 +109,9 @@
         "xtr1common": "cpp",
         "xtree": "cpp",
         "xutility": "cpp",
-        "*.glsl": "cpp",
+        "*.glsl": "glsl",
         "resumable": "cpp",
         "codecvt": "cpp",
-        "*.vs": "cpp"
+        "*.vs": "glsl"
     }
 }
